# Back-end

./: db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
Backend/: .env  settings.py  urls.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0003_user_customer_worker_delete_customuser.py
contactus/: forms.py  urls.py  views.py
templates/contact/: contact.html  success.html
templates/password/: password_reset.html  password_reset_confirm.html
templates/registration/: customer_reg.html  signup.html  worker_reg.html
vlr_auth/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
vlr_auth/migrations/: 0001_initial.py  0002_profile_birthdate_profile_gender.py  0002_remove_workerprofile_first_name_and_more.py  0002_review_reviewworkerrating_serviceproviderprofile_and_more.py  0003_alter_category_options_alter_category_title.py  0003_remove_profile_birthdate_remove_profile_gender.py  0003_reviewworkerrating_username.py  0003_serviceproviderprofile_profile_picture_and_more.py  0004_alter_serviceproviderprofile_profile_picture.py  0004_profile_profile_picture_alter_profile_phone_number.py  0004_rename_user_profile_username_and_more.py  0005_alter_review_options.py  0005_category_service.py  0005_review.py  0006_alter_profile_profile_picture.py  0006_alter_serviceproviderprofile_options_and_more.py  0006_worker_alter_category_options_delete_service_and_more.py  0007_alter_serviceproviderprofile_profile_picture.py  0007_alter_worker_years_of_exp.py  0014_review.py  (+9 more)
